--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,6 +96,37 @@
     <string name="signup_success">Account created successfully!</string>
     <string name="forgot_password_message">Password reset link will be sent to your email</string>
     
+    <!-- Complaint Detail Screen -->
+    <string name="complaint_details">Complaint Details</string>
+    <string name="complaint_id">Complaint ID</string>
+    <string name="submitted_on">Submitted On</string>
+    <string name="category">Category</string>
+    <string name="description">Description</string>
+    <string name="location">Location</string>
+    <string name="timeline">Timeline</string>
+    <string name="status_pending">Pending</string>
+    <string name="status_resolved">Resolved</string>
+    <string name="under_review">Under Review</string>
+    <string name="pending_text">Waiting for completion</string>
+    
+    <!-- View History Screen -->
+    <string name="complaint_history">Complaint History</string>
+    <string name="total">Total</string>
+    <string name="pending">Pending</string>
+    <string name="resolved">Resolved</string>
+    <string name="in_progress">In Progress</string>
+    <string name="all">All</string>
+    <string name="no_complaints">No Complaints Found</string>
+    <string name="no_complaints_desc">You haven\'t submitted any complaints yet</string>
+    
+    <!-- Track Status Screen -->
+    <string name="search">Search</string>
+    <string name="search_complaint_hint">Search by ID or title…</string>
+    <string name="active_complaints">Active Complaints</string>
+    <string name="progress">Progress</string>
+    <string name="no_active_complaints">No Active Complaints</string>
+    <string name="no_active_complaints_desc">All your complaints have been resolved!</string>
+    
     <!-- General -->
     <string name="loading">Loading…</string>
     <string name="error_occurred">An error occurred</string>
